tests/knowledge/testing-accounts-data/account-data-vpc-platform/test/us-east-2/ec2-describe-subnets.json
{
    "Subnets": [
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-2b",
            "AvailabilityZoneId": "use2-az2",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.16.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-2:111111111111:subnet/subnet-4630243c",
            "SubnetId": "subnet-4630243c",
            "VpcId": "vpc-0e289f65"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-2a",
            "AvailabilityZoneId": "use2-az1",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.0.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-2:111111111111:subnet/subnet-f9be6092",
            "SubnetId": "subnet-f9be6092",
            "VpcId": "vpc-0e289f65"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-2c",
            "AvailabilityZoneId": "use2-az3",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.32.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-2:111111111111:subnet/subnet-6e81fd22",
            "SubnetId": "subnet-6e81fd22",
            "VpcId": "vpc-0e289f65"
        }
    ]
}
